--- a/Django/todo/app/templates/add_task.html
+++ b/Django/todo/app/templates/add_task.html
@@ -55,6 +55,8 @@
             <label>Deadline Time:</label>
             <input type="datetime-local" name="deadline" required>
 
+            <label> Completed</label>
+            <input type="checkbox" name="task_status" value = "True">
             <button type="submit">Add Task</button>
         </form>
     </div>
